--- a/lab_TGIP_1.vcxproj
+++ b/lab_TGIP_1.vcxproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
+    <None Include="README.md" />
     <None Include="SimpleFragmentShader.fragmentshader" />
     <None Include="SimpleVertexShader.vertexshader" />
   </ItemGroup>
